--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
      
       <nav class="navbar navbar-expand-md navbar-dark bg-light">
         <div class="container">
-          <a class="navbar-brand absolute" href="index.html">Skwela</a>
+          <a class="navbar-brand absolute" href="index.php">Skwela</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse navbar-light" id="navbarsExample05">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.php">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="courses.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Online Courses</a>
@@ -327,31 +327,11 @@
   
     <footer class="site-footer" style="background-image: url(images/big_image_3.jpg);">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-4">
+                   <div class="row">
+              <div class="col-md-8">
             <h3>About</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
           </div>
-          <div class="col-md-6 ml-auto">
-            <div class="row">
-              <div class="col-md-4">
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Company</a></li>
-                  <li><a href="#">Teachers</a></li>
-                  <li><a href="#">Courses</a></li>
-                  <li><a href="#">Categories</a></li>
-                </ul>
-              </div>
-              <div class="col-md-4">
-                <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Company</a></li>
-                  <li><a href="#">Teachers</a></li>
-                  <li><a href="#">Courses</a></li>
-                  <li><a href="#">Categories</a></li>
-                </ul>
-              </div>
               <div class="col-md-4">
                 <ul class="list-unstyled">
                   <li><a href="#">About Us</a></li>
@@ -362,8 +342,7 @@
                 </ul>
               </div>
             </div>
-          </div>
-        </div>
+            
         <div class="row">
           <div class="col-md-12">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
